# baymax

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  baymax_detail.txt  pyproject.toml  requirements.txt  setup.py  work_flow.md
src/: main.py
src/agent/brain/: detector.py  executor.py  gpt_agent.py  interpreter.py  processor.py  text_analyzer.py
src/agent/core/: agent.py
src/agent/memory_access/: conversation_manager.py  conversation_memory.py  default_self_knowledge.py  memory_manager.py  name_memory.py  self_knowledge.py  self_knowledge_loader.py  user_memory.py  voice_memory.py
src/agent/meta/: hardware_meta_skill_generator.py  hardware_meta_skill_handler.py  meta_skill_generator.py  meta_skill_handler.py
src/agent/reasoning/: emotion_reasoner.py  fallback_reasoner.py  name_learning.py  name_reasoner.py  voice_identity.py
src/agent/retriever/: retriever.py
src/agent/tracker/: conversation_tracker.py
src/config/: instances.py  settings.py
src/hardware/: speaker.py
src/memory/: base.py  embedding.py  in_memory.py  json_memory.py  schema.py  vector_memory.py
src/services/: asr.py  llm.py  llm_agent.py  tts.py
src/services/asr/: agent.py  client.py
src/services/asr/providers/: whisper_asr.py
src/services/llm/: agent.py  client.py  prompt_templates.py
src/services/llm/modules/: __init__.py  emotion.py  intent.py  responder.py  summarizer.py
src/services/memory/: base.py  client.py  embedding.py
src/services/tts/: agent.py  client.py
src/skills/: loader.py
src/utils/: file.py  hallucination.py  logger.py  network.py
(+19 files in other folders)
