[project]
name = "baymax-mini"
version = "0.2.0"
description = "ผู้ช่วยอัจฉริยะที่สามารถโต้ตอบด้วยเสียงภาษาไทย"
authors = [
    {name = "Songkrod Thanavorn", email = "songkrodt@example.com"},
]
maintainers = [
    {name = "Songkrod Thanavorn", email = "songkrodt@example.com"},
]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.8"

[project.urls]
Homepage = "https://github.com/songkrodt/baymax"
Repository = "https://github.com/songkrodt/baymax.git"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/__about__.py"

[tool.hatch.build.targets.wheel]
packages = ["src"] 